@@ -1,12 +1,13 @@
 package carpet.commands;
 
 import carpet.helpers.EntityPlayerActionPack;
+import carpet.helpers.EntityPlayerActionPack.Action;
+import carpet.helpers.EntityPlayerActionPack.ActionType;
 import carpet.CarpetSettings;
-import carpet.fakes.ServerPlayerEntityInterface;
+import carpet.fakes.ServerPlayerInterface;
 import carpet.patches.EntityPlayerMPFake;
-import carpet.settings.SettingsManager;
+import carpet.utils.CommandHelper;
 import carpet.utils.Messenger;
-import com.google.common.collect.Sets;
 import com.mojang.authlib.GameProfile;
 import com.mojang.brigadier.Command;
 import com.mojang.brigadier.CommandDispatcher;
@@ -15,50 +16,52 @@ import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import net.minecraft.command.argument.DimensionArgumentType;
-import net.minecraft.command.argument.RotationArgumentType;
-import net.minecraft.command.argument.Vec3ArgumentType;
-import net.minecraft.server.PlayerManager;
-import net.minecraft.server.command.ServerCommandSource;
-import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.commands.CommandBuildContext;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.commands.arguments.DimensionArgument;
+import net.minecraft.commands.arguments.GameModeArgument;
+import net.minecraft.commands.arguments.coordinates.RotationArgument;
+import net.minecraft.commands.arguments.coordinates.Vec3Argument;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.UUIDUtil;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Direction;
-import net.minecraft.util.math.Vec2f;
-import net.minecraft.util.math.Vec3d;
-import net.minecraft.util.registry.RegistryKey;
-import net.minecraft.world.GameMode;
-import net.minecraft.world.World;
-
-import java.util.Arrays;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.server.players.PlayerList;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.GameType;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.phys.Vec2;
+import net.minecraft.world.phys.Vec3;
 import java.util.Collection;
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.function.Consumer;
 
-import static net.minecraft.server.command.CommandManager.argument;
-import static net.minecraft.server.command.CommandManager.literal;
-import static net.minecraft.command.CommandSource.suggestMatching;
+import static net.minecraft.commands.Commands.argument;
+import static net.minecraft.commands.Commands.literal;
+import static net.minecraft.commands.SharedSuggestionProvider.suggest;
 
 public class PlayerCommand
 {
-
     // TODO: allow any order like execute
-    public static void register(CommandDispatcher<ServerCommandSource> dispatcher)
+    public static void register(CommandDispatcher<CommandSourceStack> dispatcher, CommandBuildContext commandBuildContext)
     {
-        LiteralArgumentBuilder<ServerCommandSource> literalargumentbuilder = literal("player")
-                .requires((player) -> SettingsManager.canUseCommand(player, CarpetSettings.commandPlayer))
+        LiteralArgumentBuilder<CommandSourceStack> command = literal("player")
+                .requires((player) -> CommandHelper.canUseCommand(player, CarpetSettings.commandPlayer))
                 .then(argument("player", StringArgumentType.word())
-                        .suggests( (c, b) -> suggestMatching(getPlayers(c.getSource()), b))
-                        .then(literal("stop").executes(PlayerCommand::stop))
-                        .then(makeActionCommand("use", EntityPlayerActionPack.ActionType.USE))
-                        .then(makeActionCommand("jump", EntityPlayerActionPack.ActionType.JUMP))
-                        .then(makeActionCommand("attack", EntityPlayerActionPack.ActionType.ATTACK))
-                        .then(makeActionCommand("drop", EntityPlayerActionPack.ActionType.DROP_ITEM))
+                        .suggests((c, b) -> suggest(getPlayerSuggestions(c.getSource()), b))
+                        .then(literal("stop").executes(manipulation(EntityPlayerActionPack::stopAll)))
+                        .then(makeActionCommand("use", ActionType.USE))
+                        .then(makeActionCommand("jump", ActionType.JUMP))
+                        .then(makeActionCommand("attack", ActionType.ATTACK))
+                        .then(makeActionCommand("drop", ActionType.DROP_ITEM))
                         .then(makeDropCommand("drop", false))
-                        .then(makeActionCommand("dropStack", EntityPlayerActionPack.ActionType.DROP_STACK))
+                        .then(makeActionCommand("dropStack", ActionType.DROP_STACK))
                         .then(makeDropCommand("dropStack", true))
-                        .then(makeActionCommand("swapHands", EntityPlayerActionPack.ActionType.SWAP_HANDS))
+                        .then(makeActionCommand("swapHands", ActionType.SWAP_HANDS))
                         .then(literal("hotbar")
                                 .then(argument("slot", IntegerArgumentType.integer(1, 9))
                                         .executes(c -> manipulate(c, ap -> ap.setSlot(IntegerArgumentType.getInteger(c, "slot"))))))
@@ -78,118 +81,120 @@ public class PlayerCommand
                                 .then(literal("west").executes(manipulation(ap -> ap.look(Direction.WEST))))
                                 .then(literal("up").executes(manipulation(ap -> ap.look(Direction.UP))))
                                 .then(literal("down").executes(manipulation(ap -> ap.look(Direction.DOWN))))
-                                .then(literal("at").then(argument("position", Vec3ArgumentType.vec3()).executes(PlayerCommand::lookAt)))
-                                .then(argument("direction", RotationArgumentType.rotation())
-                                        .executes(c -> manipulate(c, ap -> ap.look(RotationArgumentType.getRotation(c, "direction").toAbsoluteRotation(c.getSource())))))
+                                .then(literal("at").then(argument("position", Vec3Argument.vec3())
+                                        .executes(c -> manipulate(c, ap -> ap.lookAt(Vec3Argument.getVec3(c, "position"))))))
+                                .then(argument("direction", RotationArgument.rotation())
+                                        .executes(c -> manipulate(c, ap -> ap.look(RotationArgument.getRotation(c, "direction").getRotation(c.getSource())))))
                         ).then(literal("turn")
-                                .then(literal("left").executes(c -> manipulate(c, ap -> ap.turn(-90, 0))))
-                                .then(literal("right").executes(c -> manipulate(c, ap -> ap.turn(90, 0))))
-                                .then(literal("back").executes(c -> manipulate(c, ap -> ap.turn(180, 0))))
-                                .then(argument("rotation", RotationArgumentType.rotation())
-                                        .executes(c -> manipulate(c, ap -> ap.turn(RotationArgumentType.getRotation(c, "rotation").toAbsoluteRotation(c.getSource())))))
-                        ).then(literal("move").executes(c -> manipulate(c, EntityPlayerActionPack::stopMovement))
-                                .then(literal("forward").executes(c -> manipulate(c, ap -> ap.setForward(1))))
-                                .then(literal("backward").executes(c -> manipulate(c, ap -> ap.setForward(-1))))
-                                .then(literal("left").executes(c -> manipulate(c, ap -> ap.setStrafing(1))))
-                                .then(literal("right").executes(c -> manipulate(c, ap -> ap.setStrafing(-1))))
+                                .then(literal("left").executes(manipulation(ap -> ap.turn(-90, 0))))
+                                .then(literal("right").executes(manipulation(ap -> ap.turn(90, 0))))
+                                .then(literal("back").executes(manipulation(ap -> ap.turn(180, 0))))
+                                .then(argument("rotation", RotationArgument.rotation())
+                                        .executes(c -> manipulate(c, ap -> ap.turn(RotationArgument.getRotation(c, "rotation").getRotation(c.getSource())))))
+                        ).then(literal("move").executes(manipulation(EntityPlayerActionPack::stopMovement))
+                                .then(literal("forward").executes(manipulation(ap -> ap.setForward(1))))
+                                .then(literal("backward").executes(manipulation(ap -> ap.setForward(-1))))
+                                .then(literal("left").executes(manipulation(ap -> ap.setStrafing(1))))
+                                .then(literal("right").executes(manipulation(ap -> ap.setStrafing(-1))))
                         ).then(literal("spawn").executes(PlayerCommand::spawn)
-                                .then(literal("at").then(argument("position", Vec3ArgumentType.vec3()).executes(PlayerCommand::spawn)
-                                        .then(literal("facing").then(argument("direction", RotationArgumentType.rotation()).executes(PlayerCommand::spawn)
-                                                .then(literal("in").then(argument("dimension", DimensionArgumentType.dimension()).executes(PlayerCommand::spawn)))
-                                        ))
+                                .then(literal("in").requires((player) -> player.hasPermission(2))
+                                        .then(argument("gamemode", GameModeArgument.gameMode())
+                                        .executes(PlayerCommand::spawn)))
+                                .then(literal("at").then(argument("position", Vec3Argument.vec3()).executes(PlayerCommand::spawn)
+                                        .then(literal("facing").then(argument("direction", RotationArgument.rotation()).executes(PlayerCommand::spawn)
+                                                .then(literal("in").then(argument("dimension", DimensionArgument.dimension()).executes(PlayerCommand::spawn)
+                                                        .then(literal("in").requires((player) -> player.hasPermission(2))
+                                                                .then(argument("gamemode", GameModeArgument.gameMode())
+                                                                .executes(PlayerCommand::spawn)
+                                                        )))
+                                        )))
                                 ))
                         )
                 );
-        dispatcher.register(literalargumentbuilder);
+        dispatcher.register(command);
     }
 
-    private static LiteralArgumentBuilder<ServerCommandSource> makeActionCommand(String actionName, EntityPlayerActionPack.ActionType type)
+    private static LiteralArgumentBuilder<CommandSourceStack> makeActionCommand(String actionName, ActionType type)
     {
         return literal(actionName)
-                .executes(c -> action(c, type, EntityPlayerActionPack.Action.once()))
-                .then(literal("once").executes(c -> action(c, type, EntityPlayerActionPack.Action.once())))
-                .then(literal("continuous").executes(c -> action(c, type, EntityPlayerActionPack.Action.continuous())))
+                .executes(manipulation(ap -> ap.start(type, Action.once())))
+                .then(literal("once").executes(manipulation(ap -> ap.start(type, Action.once()))))
+                .then(literal("continuous").executes(manipulation(ap -> ap.start(type, Action.continuous()))))
                 .then(literal("interval").then(argument("ticks", IntegerArgumentType.integer(1))
-                        .executes(c -> action(c, type, EntityPlayerActionPack.Action.interval(IntegerArgumentType.getInteger(c, "ticks"))))));
+                        .executes(c -> manipulate(c, ap -> ap.start(type, Action.interval(IntegerArgumentType.getInteger(c, "ticks")))))));
     }
 
-    private static LiteralArgumentBuilder<ServerCommandSource> makeDropCommand(String actionName, boolean dropAll)
+    private static LiteralArgumentBuilder<CommandSourceStack> makeDropCommand(String actionName, boolean dropAll)
     {
         return literal(actionName)
-                .then(literal("all").executes(c ->manipulate(c, ap -> ap.drop(-2,dropAll))))
-                .then(literal("mainhand").executes(c ->manipulate(c, ap -> ap.drop(-1,dropAll))))
-                .then(literal("offhand").executes(c ->manipulate(c, ap -> ap.drop(40,dropAll))))
+                .then(literal("all").executes(manipulation(ap -> ap.drop(-2, dropAll))))
+                .then(literal("mainhand").executes(manipulation(ap -> ap.drop(-1, dropAll))))
+                .then(literal("offhand").executes(manipulation(ap -> ap.drop(40, dropAll))))
                 .then(argument("slot", IntegerArgumentType.integer(0, 40)).
-                        executes(c ->manipulate(c, ap -> ap.drop(
-                                IntegerArgumentType.getInteger(c,"slot"),
-                                dropAll
-                        ))));
+                        executes(c -> manipulate(c, ap -> ap.drop(IntegerArgumentType.getInteger(c, "slot"), dropAll))));
     }
 
-    private static Collection<String> getPlayers(ServerCommandSource source)
+    private static Collection<String> getPlayerSuggestions(CommandSourceStack source)
     {
-        Set<String> players = Sets.newLinkedHashSet(Arrays.asList("Steve", "Alex"));
-        players.addAll(source.getPlayerNames());
+        Set<String> players = new LinkedHashSet<>(List.of("Steve", "Alex"));
+        players.addAll(source.getOnlinePlayerNames());
         return players;
     }
 
-    private static ServerPlayerEntity getPlayer(CommandContext<ServerCommandSource> context)
+    private static ServerPlayer getPlayer(CommandContext<CommandSourceStack> context)
     {
         String playerName = StringArgumentType.getString(context, "player");
         MinecraftServer server = context.getSource().getServer();
-        return server.getPlayerManager().getPlayer(playerName);
+        return server.getPlayerList().getPlayerByName(playerName);
     }
 
-    private static boolean cantManipulate(CommandContext<ServerCommandSource> context)
+    private static boolean cantManipulate(CommandContext<CommandSourceStack> context)
     {
-        PlayerEntity player = getPlayer(context);
+        Player player = getPlayer(context);
+        CommandSourceStack source = context.getSource();
         if (player == null)
         {
-            Messenger.m(context.getSource(), "r Can only manipulate existing players");
+            Messenger.m(source, "r Can only manipulate existing players");
             return true;
         }
-        PlayerEntity sendingPlayer;
-        try
-        {
-            sendingPlayer = context.getSource().getPlayer();
-        }
-        catch (CommandSyntaxException e)
+        Player sender = source.getPlayer();
+        if (sender == null)
         {
             return false;
         }
 
-        if (!context.getSource().getServer().getPlayerManager().isOperator(sendingPlayer.getGameProfile()))
+        if (!source.getServer().getPlayerList().isOp(sender.getGameProfile()))
         {
-            if (sendingPlayer != player && !(player instanceof EntityPlayerMPFake))
+            if (sender != player && !(player instanceof EntityPlayerMPFake))
             {
-                Messenger.m(context.getSource(), "r Non OP players can't control other real players");
+                Messenger.m(source, "r Non OP players can't control other real players");
                 return true;
             }
         }
         return false;
     }
 
-    private static boolean cantReMove(CommandContext<ServerCommandSource> context)
+    private static boolean cantReMove(CommandContext<CommandSourceStack> context)
     {
         if (cantManipulate(context)) return true;
-        PlayerEntity player = getPlayer(context);
+        Player player = getPlayer(context);
         if (player instanceof EntityPlayerMPFake) return false;
         Messenger.m(context.getSource(), "r Only fake players can be moved or killed");
         return true;
     }
 
-    private static boolean cantSpawn(CommandContext<ServerCommandSource> context)
+    private static boolean cantSpawn(CommandContext<CommandSourceStack> context)
     {
         String playerName = StringArgumentType.getString(context, "player");
         MinecraftServer server = context.getSource().getServer();
-        PlayerManager manager = server.getPlayerManager();
-        PlayerEntity player = manager.getPlayer(playerName);
-        if (player != null)
+        PlayerList manager = server.getPlayerList();
+
+        if (manager.getPlayerByName(playerName) != null)
         {
             Messenger.m(context.getSource(), "r Player ", "rb " + playerName, "r  is already logged on");
             return true;
         }
-        GameProfile profile = server.getUserCache().findByName(playerName).orElse(null);
+        GameProfile profile = server.getProfileCache().get(playerName).orElse(null);
         if (profile == null)
         {
             if (!CarpetSettings.allowSpawningOfflinePlayers)
@@ -198,15 +203,15 @@ public class PlayerCommand
                         "Banned players can only be summoned in Singleplayer and in servers in off-line mode.");
                 return true;
             } else {
-                profile = new GameProfile(PlayerEntity.getOfflinePlayerUuid(playerName), playerName);
+                profile = new GameProfile(UUIDUtil.createOfflinePlayerUUID(playerName), playerName);
             }
         }
-        if (manager.getUserBanList().contains(profile))
+        if (manager.getBans().isBanned(profile))
         {
             Messenger.m(context.getSource(), "r Player ", "rb " + playerName, "r  is banned on this server");
             return true;
         }
-        if (manager.isWhitelistEnabled() && manager.isWhitelisted(profile) && !context.getSource().hasPermissionLevel(2))
+        if (manager.isUsingWhitelist() && manager.isWhiteListed(profile) && !context.getSource().hasPermission(2))
         {
             Messenger.m(context.getSource(), "r Whitelisted players can only be spawned by operators");
             return true;
@@ -214,135 +219,123 @@ public class PlayerCommand
         return false;
     }
 
-    private static int kill(CommandContext<ServerCommandSource> context)
+    private static int kill(CommandContext<CommandSourceStack> context)
     {
         if (cantReMove(context)) return 0;
         getPlayer(context).kill();
         return 1;
     }
 
-    private static int lookAt(CommandContext<ServerCommandSource> context)
-    {
-        return manipulate(context, ap -> {
-            //try {
-                ap.lookAt(Vec3ArgumentType.getVec3(context, "position"));
-            //} catch (CommandSyntaxException ignored) {}
-        });
-    }
-
     @FunctionalInterface
-    interface SupplierWithCommandSyntaxException<T>
+    interface SupplierWithCSE<T>
     {
         T get() throws CommandSyntaxException;
     }
 
-    private static <T> T tryGetArg(SupplierWithCommandSyntaxException<T> a, SupplierWithCommandSyntaxException<T> b) throws CommandSyntaxException
+    private static <T> T getArgOrDefault(SupplierWithCSE<T> getter, T defaultValue) throws CommandSyntaxException
     {
         try
         {
-            return a.get();
+            return getter.get();
         }
         catch (IllegalArgumentException e)
         {
-            return b.get();
+            return defaultValue;
         }
     }
 
-    private static int spawn(CommandContext<ServerCommandSource> context) throws CommandSyntaxException
+    private static int spawn(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
     {
         if (cantSpawn(context)) return 0;
-        ServerCommandSource source = context.getSource();
-        Vec3d pos = tryGetArg(
-                () -> Vec3ArgumentType.getVec3(context, "position"),
-                source::getPosition
+
+        CommandSourceStack source = context.getSource();
+        Vec3 pos = getArgOrDefault(
+                () -> Vec3Argument.getVec3(context, "position"),
+                source.getPosition()
         );
-        Vec2f facing = tryGetArg(
-                () -> RotationArgumentType.getRotation(context, "direction").toAbsoluteRotation(context.getSource()),
-                source::getRotation
+        Vec2 facing = getArgOrDefault(
+                () -> RotationArgument.getRotation(context, "direction").getRotation(source),
+                source.getRotation()
         );
-        RegistryKey<World> dimType = tryGetArg(
-                () -> DimensionArgumentType.getDimensionArgument(context, "dimension").getRegistryKey(),
-                () -> source.getWorld().getRegistryKey() // dimension.getType()
+        ResourceKey<Level> dimType = getArgOrDefault(
+                () -> DimensionArgument.getDimension(context, "dimension").dimension(),
+                source.getLevel().dimension()
         );
-        GameMode mode = GameMode.CREATIVE;
+        GameType mode = GameType.CREATIVE;
         boolean flying = false;
-        try
+        if (source.getEntity() instanceof ServerPlayer sender)
         {
-            ServerPlayerEntity player = context.getSource().getPlayer();
-            mode = player.interactionManager.getGameMode();
-            flying = player.getAbilities().flying;
+            mode = sender.gameMode.getGameModeForPlayer();
+            flying = sender.getAbilities().flying;
         }
-        catch (CommandSyntaxException ignored) {}
-        String playerName = StringArgumentType.getString(context, "player");
-        if (playerName.length()>maxPlayerLength(source.getServer()))
+        try {
+            mode = GameModeArgument.getGameMode(context, "gamemode");
+        } catch (IllegalArgumentException notPresent) {}
+
+        if (mode == GameType.SPECTATOR)
         {
-            Messenger.m(context.getSource(), "rb Player name: "+playerName+" is too long");
+            // Force override flying to true for spectator players, or they will fell out of the world.
+            flying = true;
+        } else if (mode.isSurvival())
+        {
+            // Force override flying to false for survival-like players, or they will fly too
+            flying = false;
+        }
+        String playerName = StringArgumentType.getString(context, "player");
+        if (playerName.length() > maxNameLength(source.getServer()))
+        {
+            Messenger.m(source, "rb Player name: " + playerName + " is too long");
             return 0;
         }
 
-        MinecraftServer server = source.getServer();
-        if (!World.isValid(new BlockPos(pos.x, pos.y, pos.z)))
+        if (!Level.isInSpawnableBounds(BlockPos.containing(pos)))
         {
-            Messenger.m(context.getSource(), "rb Player "+playerName+" cannot be placed outside of the world");
+            Messenger.m(source, "rb Player " + playerName + " cannot be placed outside of the world");
             return 0;
         }
-        PlayerEntity player = EntityPlayerMPFake.createFake(playerName, server, pos.x, pos.y, pos.z, facing.y, facing.x, dimType, mode, flying);
+        Player player = EntityPlayerMPFake.createFake(playerName, source.getServer(), pos, facing.y, facing.x, dimType, mode, flying);
         if (player == null)
         {
-            Messenger.m(context.getSource(), "rb Player " + StringArgumentType.getString(context, "player") + " doesn't exist " +
-                    "and cannot spawn in online mode. Turn the server offline to spawn non-existing players");
+            Messenger.m(source, "rb Player " + playerName + " doesn't exist and cannot spawn in online mode. " +
+                    "Turn the server offline to spawn non-existing players");
             return 0;
         }
         return 1;
     }
 
-    private static int maxPlayerLength(MinecraftServer server)
+    private static int maxNameLength(MinecraftServer server)
     {
-        return server.getServerPort() >= 0 ? 16 : 40;
+        return server.getPort() >= 0 ? Player.MAX_NAME_LENGTH : 40;
     }
 
-    private static int stop(CommandContext<ServerCommandSource> context)
+    private static int manipulate(CommandContext<CommandSourceStack> context, Consumer<EntityPlayerActionPack> action)
     {
         if (cantManipulate(context)) return 0;
-        ServerPlayerEntity player = getPlayer(context);
-        ((ServerPlayerEntityInterface) player).getActionPack().stopAll();
+        ServerPlayer player = getPlayer(context);
+        action.accept(((ServerPlayerInterface) player).getActionPack());
         return 1;
     }
 
-    private static int manipulate(CommandContext<ServerCommandSource> context, Consumer<EntityPlayerActionPack> action)
-    {
-        if (cantManipulate(context)) return 0;
-        ServerPlayerEntity player = getPlayer(context);
-        action.accept(((ServerPlayerEntityInterface) player).getActionPack());
-        return 1;
-    }
-
-    private static Command<ServerCommandSource> manipulation(Consumer<EntityPlayerActionPack> action)
+    private static Command<CommandSourceStack> manipulation(Consumer<EntityPlayerActionPack> action)
     {
         return c -> manipulate(c, action);
     }
 
-    private static int action(CommandContext<ServerCommandSource> context, EntityPlayerActionPack.ActionType type, EntityPlayerActionPack.Action action)
+    private static int shadow(CommandContext<CommandSourceStack> context)
     {
-        return manipulate(context, ap -> ap.start(type, action));
-    }
+        if (cantManipulate(context)) return 0;
 
-    private static int shadow(CommandContext<ServerCommandSource> context)
-    {
-        ServerPlayerEntity player = getPlayer(context);
+        ServerPlayer player = getPlayer(context);
         if (player instanceof EntityPlayerMPFake)
         {
             Messenger.m(context.getSource(), "r Cannot shadow fake players");
             return 0;
         }
-        ServerPlayerEntity sendingPlayer = null;
-        try
-        {
-            sendingPlayer = context.getSource().getPlayer();
+        if (player.getServer().isSingleplayerOwner(player.getGameProfile())) {
+            Messenger.m(context.getSource(), "r Cannot shadow single-player server owner");
+            return 0;
         }
-        catch (CommandSyntaxException ignored) { }
 
-        if (sendingPlayer!=player && cantManipulate(context)) return 0;
         EntityPlayerMPFake.createShadow(player.server, player);
         return 1;
     }
