@@ -1,30 +1,30 @@
 package carpet.script.utils;
 
-import net.minecraft.entity.EquipmentSlot;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.inventory.Inventory;
-import net.minecraft.item.ItemStack;
-
-import java.util.Arrays;
 import java.util.List;
 
-public class EquipmentInventory implements Inventory
+import net.minecraft.world.Container;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
+
+public class EquipmentInventory implements Container
 {
-    private static final List<EquipmentSlot> slotToSlot = Arrays.asList(
+    private static final List<EquipmentSlot> slotToSlot = List.of(
             EquipmentSlot.MAINHAND,
             EquipmentSlot.FEET, EquipmentSlot.LEGS, EquipmentSlot.CHEST, EquipmentSlot.HEAD,
             EquipmentSlot.OFFHAND
     );
 
     LivingEntity mob;
+
     public EquipmentInventory(LivingEntity mob)
     {
         this.mob = mob;
     }
 
     @Override
-    public int size()
+    public int getContainerSize()
     {
         return 6;
     }
@@ -32,13 +32,18 @@ public class EquipmentInventory implements Inventory
     @Override
     public boolean isEmpty()
     {
-        for (EquipmentSlot slot: slotToSlot)
-            if (!mob.getEquippedStack(slot).isEmpty()) return false;
+        for (EquipmentSlot slot : slotToSlot)
+        {
+            if (!mob.getItemBySlot(slot).isEmpty())
+            {
+                return false;
+            }
+        }
         return true;
     }
 
     @Override
-    public ItemStack getStack(int slot)
+    public ItemStack getItem(int slot)
     {
         EquipmentSlot slotSlot;
         try
@@ -50,11 +55,11 @@ public class EquipmentInventory implements Inventory
             //going out of the index should be really exceptional
             return ItemStack.EMPTY;
         }
-        return mob.getEquippedStack(slotSlot);
+        return mob.getItemBySlot(slotSlot);
     }
 
     @Override
-    public ItemStack removeStack(int slot, int amount)
+    public ItemStack removeItem(int slot, int amount)
     {
         EquipmentSlot slotSlot;
         try
@@ -66,11 +71,11 @@ public class EquipmentInventory implements Inventory
             //going out of the index should be really exceptional
             return ItemStack.EMPTY;
         }
-        return mob.getEquippedStack(slotSlot).split(amount);
+        return mob.getItemBySlot(slotSlot).split(amount);
     }
 
     @Override
-    public ItemStack removeStack(int slot)
+    public ItemStack removeItemNoUpdate(int slot)
     {
         EquipmentSlot slotSlot;
         try
@@ -82,13 +87,13 @@ public class EquipmentInventory implements Inventory
             //going out of the index should be really exceptional
             return ItemStack.EMPTY;
         }
-        ItemStack previous = mob.getEquippedStack(slotSlot);
-        mob.equipStack(slotSlot, ItemStack.EMPTY);
+        ItemStack previous = mob.getItemBySlot(slotSlot);
+        mob.setItemSlot(slotSlot, ItemStack.EMPTY);
         return previous;
     }
 
     @Override
-    public void setStack(int slot, ItemStack stack)
+    public void setItem(int slot, ItemStack stack)
     {
         EquipmentSlot slotSlot;
         try
@@ -100,25 +105,27 @@ public class EquipmentInventory implements Inventory
             //going out of the index should be really exceptional
             return;
         }
-        mob.equipStack(slotSlot, stack);
+        mob.setItemSlot(slotSlot, stack);
     }
 
     @Override
-    public void markDirty()
+    public void setChanged()
     {
 
     }
 
     @Override
-    public boolean canPlayerUse(PlayerEntity player)
+    public boolean stillValid(Player player)
     {
         return false;
     }
 
     @Override
-    public void clear()
+    public void clearContent()
     {
-        for (EquipmentSlot slot: slotToSlot)
-            mob.equipStack(slot, ItemStack.EMPTY);
+        for (EquipmentSlot slot : slotToSlot)
+        {
+            mob.setItemSlot(slot, ItemStack.EMPTY);
+        }
     }
 }
